--- a/main.scss
+++ b/main.scss
@@ -33,7 +33,8 @@ Rebilly 2017
     'components/icon',
     'components/button',
     'components/badge',
-    'components/input';
+    'components/input',
+    'components/toggles';
 
 // 6. Page-specific styles
 @import
