--- a/main.css
+++ b/main.css
@@ -742,6 +742,15 @@ sub {
   margin: 0 6.4rem 0 0; }
 
 /**
+* Flex Helpers
+*/
+.no-flex {
+  -webkit-box-flex: 0 0 auto;
+  -webkit-flex: 0 0 auto;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto; }
+
+/**
 * Object Aligment
 * These classes force text alignment for desired element (and for its inner
 * elements) by assigning text-align CSS property.
@@ -1268,7 +1277,7 @@ sub {
 
 .caption {
   display: block;
-  color: #A1B2C1;
+  color: #6B7384;
   margin-top: 4px;
   margin-top: 0.4rem; }
 
@@ -1303,6 +1312,9 @@ sub {
 textarea.input {
   resize: none; }
 
+@-moz-document url-prefix() {
+  textarea.input {
+    height: 36px; } }
 /**
 * Select
 */
@@ -1328,6 +1340,14 @@ select.input {
   padding: 8px 32px 8px 16px;
   padding: 0.8rem 3.2rem 0.8rem 1.6rem; }
 
+/**
+* Input label
+*/
+.input.input-label {
+  box-shadow: 0 0 0 1px #C4CED8 inset;
+  background: #F9FAFB;
+  text-align: center; }
+
 select:-moz-focusring {
   color: transparent;
   text-shadow: 0 0 0 #000; }
@@ -1335,6 +1355,48 @@ select:-moz-focusring {
 /**
 * Input Connected
 */
+.input-connected {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex; }
+
+.input-connected > * {
+  width: auto;
+  -webkit-box-flex: 1 0 auto;
+  -webkit-flex: 1 0 auto;
+  -ms-flex: 1 0 auto;
+  flex: 1 0 auto;
+  margin-left: -1px;
+  margin-left: -0.1rem; }
+
+.input-connected > *.no-flex {
+  width: auto;
+  -webkit-box-flex: 0 0 auto;
+  -webkit-flex: 0 0 auto;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto; }
+
+.input-connected > *:not(:first-child):not(:last-child),
+.input-connected > *:not(:first-child):not(:last-child) .input {
+  border-radius: 0;
+  z-index: 90; }
+
+.input-connected > *:first-child,
+.input-connected > *:first-child .input {
+  border-radius: 4px 0 0 4px; }
+
+.input-connected > *:last-child,
+.input-connected > *:last-child .input {
+  border-radius: 0 4px 4px 0; }
+
+/**
+* Input Disabled
+*/
+.input[disabled] {
+  background: #F9FAFB;
+  box-shadow: 0 0 0 1px #C4CED8 inset; }
+
 /**
 * Placeholders
 */
@@ -1354,5 +1416,147 @@ select:-moz-focusring {
 :-moz-placeholder {
   /* Firefox 18- */
   color: #A1B2C1; }
+
+.label-toggle {
+  display: inline-block;
+  position: relative;
+  padding-left: 32px;
+  margin: 0;
+  cursor: pointer; }
+
+.caption-toggle {
+  padding-left: 32px; }
+
+/**
+* Checkbox
+*/
+input.checkbox[type=checkbox] {
+  opacity: 0;
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 20px;
+  width: 20px;
+  box-sizing: border-box;
+  z-index: 10;
+  cursor: pointer; }
+  input.checkbox[type=checkbox]:checked ~ .checkbox-style {
+    box-shadow: 0 0 0 1px #0044D4 inset; }
+  input.checkbox[type=checkbox]:focus ~ .checkbox-style {
+    box-shadow: 0 0 0 1px #0044D4 inset, 0 0 0 1px #0044D4; }
+  input.checkbox[type=checkbox]:checked ~ .checkbox-style .icon {
+    fill: #0044D4;
+    opacity: 1; }
+
+.checkbox-style {
+  cursor: pointer;
+  box-sizing: border-box;
+  width: 16px;
+  height: 16px;
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  border-radius: 2px;
+  box-shadow: 0 0 0 1px #C4CED8 inset, 0 1px 2px 0 rgba(161, 178, 193, 0.5) inset; }
+
+.checkbox-style .icon {
+  position: absolute;
+  top: 2px;
+  right: -2px;
+  opacity: 0; }
+
+/**
+* Radio
+*/
+input.radio[type=radio] {
+  opacity: 0;
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 20px;
+  width: 20px;
+  box-sizing: border-box;
+  z-index: 10;
+  cursor: pointer; }
+  input.radio[type=radio]:checked ~ .radio-style {
+    box-shadow: 0 0 0 1px #0044D4 inset; }
+  input.radio[type=radio]:focus ~ .radio-style {
+    box-shadow: 0 0 0 1px #0044D4 inset, 0 0 0 1px #0044D4; }
+  input.radio[type=radio]:checked ~ .radio-style .icon {
+    fill: #0044D4;
+    opacity: 1; }
+
+.radio-style {
+  cursor: pointer;
+  box-sizing: border-box;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  box-shadow: 0 0 0 1px #C4CED8 inset, 0 1px 2px 0 rgba(161, 178, 193, 0.5) inset; }
+
+.radio-style .icon {
+  position: absolute;
+  top: 2px;
+  right: -2px;
+  opacity: 0; }
+
+/**
+* Switch
+*/
+.switch-body {
+  display: inline-block;
+  height: 20px;
+  width: 36px;
+  border-radius: 36px;
+  position: relative;
+  vertical-align: baseline;
+  cursor: pointer; }
+
+input.switch[type=checkbox] {
+  opacity: 0;
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 20px;
+  width: 20px;
+  box-sizing: border-box; }
+  input.switch[type=checkbox]:checked + .switch-handle {
+    background-color: #0044D4; }
+  input.switch[type=checkbox]:checked + .switch-handle:before {
+    -webkit-transform: translateX(16px);
+    -moz-transform: translateX(16px);
+    -ms-transform: translateX(16px);
+    transform: translateX(16px); }
+
+.switch-handle {
+  position: absolute;
+  border-radius: 20px;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #C4CED8;
+  -webkit-transition: 0.4s;
+  -moz-transition: 0.4s;
+  -ms-transition: 0.4s;
+  transition: 0.4s; }
+
+.switch-handle:before {
+  position: absolute;
+  content: "";
+  height: 16px;
+  width: 16px;
+  border-radius: 50%;
+  left: 2px;
+  bottom: 2px;
+  background-color: white;
+  -webkit-transition: 0.2s;
+  -moz-transition: 0.2s;
+  -ms-transition: 0.2s;
+  transition: 0.2s; }
 
 /*# sourceMappingURL=main.css.map */
