--- a/main.scss
+++ b/main.scss
@@ -34,7 +34,9 @@ Rebilly 2017
     'components/button',
     'components/badge',
     'components/input',
-    'components/toggles';
+    'components/toggle',
+    'components/table',
+    'components/list';
 
 // 6. Page-specific styles
 @import
