--- a/components/_icon.scss
+++ b/components/_icon.scss
@@ -11,19 +11,22 @@
     color: transparent;
     display: inline-block;
     vertical-align: middle;
+    @include rem(margin, -4px 0 -2px 0);
+}
+
+.icon-20 {
     width: 20px;
     height: 20px;
-    @include rem(margin, -4px 0 -2px 0);
 }
 
 /**
 * Positioning
 */
-.icon-left {
+.icon.is-left {
     @include rem(margin-right, $space-s);
 }
 
-.icon-right {
+.icon.is-right {
     @include rem(margin-left, $space-s);
 }
 
