--- a/main.css
+++ b/main.css
@@ -555,10 +555,10 @@ sub {
 * floats
 */
 .left {
-  float: left; }
+  float: left !important; }
 
 .right {
-  float: right; }
+  float: right !important; }
 
 /**
 * Main content containers
@@ -611,150 +611,147 @@ sub {
 * Text variations
 */
 .italic {
-  font-style: italic; }
+  font-style: italic !important; }
 
 .lowercase {
-  text-transform: lowercase; }
+  text-transform: lowercase !important; }
 
 .titlecase {
-  text-transform: capitalize; }
+  text-transform: capitalize !important; }
 
 .uppercase {
-  text-transform: uppercase; }
+  text-transform: uppercase !important; }
 
 .overline {
-  text-decoration: overline; }
+  text-decoration: overline !important; }
 
 .line-through {
-  text-decoration: line-through; }
+  text-decoration: line-through !important; }
 
 .underline {
-  text-decoration: underline; }
+  text-decoration: underline !important; }
 
 .no-decoration {
-  text-decoration: none; }
+  text-decoration: none !important; }
 
 /**
 * Text wrapping / space
 */
 .break-all {
-  word-break: break-all; }
+  word-break: break-all !important; }
 
 .keep-all {
-  word-break: keep-all; }
+  word-break: keep-all !important; }
 
 .break-word {
-  word-wrap: break-word; }
+  word-wrap: break-word !important; }
 
 .no-wrap {
-  white-space: nowrap; }
+  white-space: nowrap !important; }
 
 .pre {
-  white-space: pre; }
+  white-space: pre !important; }
 
 .pre-wrap {
-  white-space: pre-wrap; }
+  white-space: pre-wrap !important; }
 
 .pre-line {
-  white-space: pre-line; }
+  white-space: pre-line !important; }
 
 /**
 * Text aligment
 */
 .text-right {
-  text-align: right; }
+  text-align: right !important; }
 
 .text-left {
-  text-align: left; }
+  text-align: left !important; }
 
 .text-center {
-  text-align: center; }
+  text-align: center !important; }
 
 .text-justify {
-  text-align: justify; }
+  text-align: justify !important; }
 
 /**
 * Spatial Helpers
 */
 .inset-default {
-  padding: 20px;
-  padding: 2rem; }
+  padding: 20px !important;
+  padding: 2rem !important; }
 
 .inset-xxs {
-  padding: 2px 2px 2px 2px;
-  padding: 0.2rem 0.2rem 0.2rem 0.2rem; }
+  padding: 2px 2px 2px 2px !important; }
 
 .inset-xs {
-  padding: 4px 4px 4px 4px;
-  padding: 0.4rem 0.4rem 0.4rem 0.4rem; }
+  padding: 4px 4px 4px 4px !important; }
 
 .inset-s {
-  padding: 8px 8px 8px 8px;
-  padding: 0.8rem 0.8rem 0.8rem 0.8rem; }
+  padding: 8px 8px 8px 8px !important; }
 
 .inset-m {
-  padding: 16px 16px 16px 16px;
-  padding: 1.6rem 1.6rem 1.6rem 1.6rem; }
+  padding: 16px 16px 16px 16px !important; }
 
 .inset-l {
-  padding: 32px 32px 32px 32px;
-  padding: 3.2rem 3.2rem 3.2rem 3.2rem; }
+  padding: 32px 32px 32px 32px !important; }
 
 .inset-xl {
-  padding: 64px 64px 64px 64px;
-  padding: 6.4rem 6.4rem 6.4rem 6.4rem; }
+  padding: 64px 64px 64px 64px !important; }
 
 .stack-default {
-  margin: 0 0 16px 0;
-  margin: 0 0 1.6rem 0; }
+  margin: 0 0 16px 0 !important; }
 
 .stack-xxs {
-  margin: 0 0 2px 0;
-  margin: 0 0 0.2rem 0; }
+  margin: 0 0 2px 0 !important; }
 
 .stack-xs {
-  margin: 0 0 4px 0;
-  margin: 0 0 0.4rem 0; }
+  margin: 0 0 4px 0 !important; }
 
 .stack-s {
-  margin: 0 0 8px 0;
-  margin: 0 0 0.8rem 0; }
+  margin: 0 0 8px 0 !important; }
 
 .stack-m {
-  margin: 0 0 16px 0;
-  margin: 0 0 1.6rem 0; }
+  margin: 0 0 16px 0 !important; }
 
 .stack-l {
-  margin: 0 0 32px 0;
-  margin: 0 0 3.2rem 0; }
+  margin: 0 0 32px 0 !important; }
 
 .stack-xl {
-  margin: 0 0 64px 0;
-  margin: 0 0 6.4rem 0; }
+  margin: 0 0 64px 0 !important; }
 
 .inline-xxs {
-  margin: 0 2px 0 0;
-  margin: 0 0.2rem 0 0; }
+  margin: 0 2px 0 0 !important;
+  margin: 0 0.2rem 0 0 !important; }
 
 .inline-xs {
-  margin: 0 4px 0 0;
-  margin: 0 0.4rem 0 0; }
+  margin: 0 4px 0 0 !important;
+  margin: 0 0.4rem 0 0 !important; }
 
 .inline-s {
-  margin: 0 8px 0 0;
-  margin: 0 0.8rem 0 0; }
+  margin: 0 8px 0 0 !important;
+  margin: 0 0.8rem 0 0 !important; }
 
 .inline-m {
-  margin: 0 16px 0 0;
-  margin: 0 1.6rem 0 0; }
+  margin: 0 16px 0 0 !important;
+  margin: 0 1.6rem 0 0 !important; }
 
 .inline-l {
-  margin: 0 32px 0 0;
-  margin: 0 3.2rem 0 0; }
+  margin: 0 32px 0 0 !important;
+  margin: 0 3.2rem 0 0 !important; }
 
 .inline-xl {
-  margin: 0 64px 0 0;
-  margin: 0 6.4rem 0 0; }
+  margin: 0 64px 0 0 !important;
+  margin: 0 6.4rem 0 0 !important; }
+
+/**
+* Flex Helpers
+*/
+.no-flex {
+  width: auto;
+  -webkit-box-flex: 0 0 auto !important;
+  -webkit-flex: 0 0 auto !important;
+  -ms-flex: 0 0 auto !important;
+  flex: 0 0 auto !important; }
 
 /**
 * Object Aligment
@@ -762,46 +759,46 @@ sub {
 * elements) by assigning text-align CSS property.
 */
 .align-left {
-  text-align: left; }
+  text-align: left !important; }
 
 .align-right {
-  text-align: right; }
+  text-align: right !important; }
 
 .align-center {
-  text-align: center; }
+  text-align: center !important; }
 
 .align-justify {
-  text-align: justify; }
+  text-align: justify !important; }
 
 /**
 * Z-Index
 */
 .z-90 {
-  z-index: 90; }
+  z-index: 90 !important; }
 
 .z-80 {
-  z-index: 80; }
+  z-index: 80 !important; }
 
 .z-70 {
-  z-index: 70; }
+  z-index: 70 !important; }
 
 .z-60 {
-  z-index: 60; }
+  z-index: 60 !important; }
 
 .z-50 {
-  z-index: 50; }
+  z-index: 50 !important; }
 
 .z-40 {
-  z-index: 40; }
+  z-index: 40 !important; }
 
 .z-30 {
-  z-index: 30; }
+  z-index: 30 !important; }
 
 .z-20 {
-  z-index: 20; }
+  z-index: 20 !important; }
 
 .z-10 {
-  z-index: 10; }
+  z-index: 10 !important; }
 
 .icon {
   background-size: contain;
@@ -812,19 +809,21 @@ sub {
   color: transparent;
   display: inline-block;
   vertical-align: middle;
-  width: 20px;
-  height: 20px;
   margin: -4px 0 -2px 0;
   margin: -0.4rem 0 -0.2rem 0; }
+
+.icon-20 {
+  width: 20px;
+  height: 20px; }
 
 /**
 * Positioning
 */
-.icon-left {
+.icon.is-left {
   margin-right: 8px;
   margin-right: 0.8rem; }
 
-.icon-right {
+.icon.is-right {
   margin-left: 8px;
   margin-left: 0.8rem; }
 
@@ -1166,23 +1165,23 @@ sub {
 /**
 * Icons
 */
-.btn-icon {
+.btn.has-icon {
   padding: 8px;
   padding: 0.8rem; }
 
-.btn-icon.btn-l {
+.btn.has-icon.btn-l {
   padding: 16px 32px;
   padding: 1.6rem 3.2rem; }
 
-.btn-icon.btn-s {
+.btn.has-icon.btn-s {
   padding: 4px;
   padding: 0.4rem; }
 
-.btn-icon-left .icon {
+.btn.has-icon-left .icon.is-left {
   margin-right: 8px;
   margin-right: 0.8rem; }
 
-.btn-icon-right .icon {
+.btn.has-icon-right .icon.is-right {
   margin-left: 8px;
   margin-left: 0.8rem; }
 
@@ -1230,19 +1229,17 @@ sub {
 .badge-info {
   background: #DCE7FE; }
 
-.input-wrapper,
-.input-icon-right,
-.input-icon-left {
+.field-control {
   position: relative; }
 
-.label {
+.field-label {
   display: block;
   font-family: "Roboto", sans-serif;
   color: #0D2B3E;
   margin-bottom: 4px;
   margin-bottom: 0.4rem; }
 
-.input {
+.field-input {
   min-width: 70px;
   width: 100%;
   height: auto;
@@ -1268,20 +1265,20 @@ sub {
   font-size: 1.4rem;
   line-height: 20px;
   line-height: 2rem; }
-  .input:focus {
+  .field-input:focus {
     box-shadow: 0 0 0 1px #0044D4 inset, 0 0 0 1px #0044d4; }
 
-.input-wrapper.is-error .label {
+.field.is-error .field-label {
   color: #E53935; }
 
-.input-wrapper.is-error .input {
+.field.is-error .field-input {
   color: #E53935;
   box-shadow: 0 0 0 1px #E53935 inset;
   background: rgba(255, 212, 211, 0.6); }
-  .input-wrapper.is-error .input:focus {
+  .field.is-error .field-input:focus {
     box-shadow: 0 0 0 1px #0044D4 inset, 0 0 0 1px #0044d4; }
 
-.caption {
+.field-caption {
   display: block;
   color: #6B7384;
   margin-top: 4px;
@@ -1290,41 +1287,41 @@ sub {
 /**
 * Input Icons
 */
-.input-icon-right .icon {
+.field-control.has-icon-right .icon.is-right {
   position: absolute;
   top: 12px;
   right: 8px; }
 
-.input-icon-right .input {
+.field-control.has-icon-right .field-input {
   padding: 8px 32px 8px 16px;
   padding: 0.8rem 3.2rem 0.8rem 1.6rem; }
 
-.input-icon-left .icon {
+.field-control.has-icon-left .icon.is-left {
   position: absolute;
   top: 12px;
   left: 8px; }
 
-.input-icon-left .input {
+.field-control.has-icon-left .field-input {
   padding: 8px 16px 8px 32px;
   padding: 0.8rem 1.6rem 0.8rem 3.2rem; }
 
-.input-wrapper.is-error .input-icon-right .icon,
-.input-wrapper.is-error .input-icon-left .icon {
+.field.is-error .field-control.has-icon-right .icon,
+.field.is-error .field-control.has-icon-left .icon {
   fill: #E53935; }
 
 /**
 * Textarea
 */
-textarea.input {
+textarea.field-input {
   resize: none; }
 
 @-moz-document url-prefix() {
-  textarea.input {
+  textarea.field-input {
     height: 36px; } }
 /**
 * Select
 */
-select.input {
+select.field-input {
   min-height: 36px;
   background: #FFFFFF;
   /* Old browsers */
@@ -1361,13 +1358,13 @@ select:-moz-focusring {
 /**
 * Input Connected
 */
-.input-connected {
+.field-control.field-control-connected {
   display: -webkit-box;
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex; }
 
-.input-connected > * {
+.field-control.field-control-connected > * {
   width: auto;
   -webkit-box-flex: 1 0 auto;
   -webkit-flex: 1 0 auto;
@@ -1376,24 +1373,17 @@ select:-moz-focusring {
   margin-left: -1px;
   margin-left: -0.1rem; }
 
-.input-connected > *.no-flex {
-  width: auto;
-  -webkit-box-flex: 0 0 auto;
-  -webkit-flex: 0 0 auto;
-  -ms-flex: 0 0 auto;
-  flex: 0 0 auto; }
-
-.input-connected > *:not(:first-child):not(:last-child),
-.input-connected > *:not(:first-child):not(:last-child) .input {
+.field-control.field-control-connected > *:not(:first-child):not(:last-child),
+.field-control.field-control-connected > *:not(:first-child):not(:last-child) .input {
   border-radius: 0;
   z-index: 90; }
 
-.input-connected > *:first-child,
-.input-connected > *:first-child .input {
+.field-control.field-control-connected > *:first-child,
+.field-control.field-control-connected > *:first-child .input {
   border-radius: 4px 0 0 4px; }
 
-.input-connected > *:last-child,
-.input-connected > *:last-child .input {
+.field-control.field-control-connected > *:last-child,
+.field-control.field-control-connected > *:last-child .input {
   border-radius: 0 4px 4px 0; }
 
 /**
